--- a/index.html
+++ b/index.html
@@ -52,7 +52,68 @@
         </section>
     </header>
     <main>
+        <!-- Plants section -->
+        <section class="plants container">
+            <div class="plants-info">
+                <h1><span class="common-color">Our </span>Plants</h1>
+                <p>
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                    exotic blooms, we offer a wide variety of fresh.
+                </p>
+            </div>
+            <div class="plants-card-container">
 
+                <div class="plants-card">
+                    <img src="./images/sample-flower-image.png" alt="">
+                    <h3>Lily Blossom</h3>
+                    <h3 id="price">20 USD</h3>
+                    <button class="common-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./images/sample-flower-image.png" alt="">
+                    <h3>Lily Blossom</h3>
+                    <h3 id="price">20 USD</h3>
+                    <button class="common-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./images/sample-flower-image.png" alt="">
+                    <h3>Lily Blossom</h3>
+                    <h3 id="price">20 USD</h3>
+                    <button class="common-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./images/sample-flower-image.png" alt="">
+                    <h3>Lily Blossom</h3>
+                    <h3 id="price">20 USD</h3>
+                    <button class="common-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./images/sample-flower-image.png" alt="">
+                    <h3>Lily Blossom</h3>
+                    <h3 id="price">20 USD</h3>
+                    <button class="common-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./images/sample-flower-image.png" alt="">
+                    <h3>Lily Blossom</h3>
+                    <h3 id="price">20 USD</h3>
+                    <button class="common-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./images/sample-flower-image.png" alt="">
+                    <h3>Lily Blossom</h3>
+                    <h3 id="price">20 USD</h3>
+                    <button class="common-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./images/sample-flower-image.png" alt="">
+                    <h3>Lily Blossom</h3>
+                    <h3 id="price">20 USD</h3>
+                    <button class="common-btn">ADD TO CART</button>
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer>
 
