Flower Lover Section Done

--- a/index.html
+++ b/index.html
@@ -114,6 +114,34 @@
 
             </div>
         </section>
+        <!-- Flower Lover Section -->
+        <section class="flower-lover container">
+            <figure>
+                <img src="./images/flower-store.png" alt="">
+            </figure>
+            <div class="flower-lover-text">
+                <h1>Flower & Plants <br> Lover</h1>
+                <ul>
+                    <li>
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.
+                    </li>
+                    <li>
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.
+                    </li>
+                    <li>
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.
+                    </li>
+                </ul>
+            </div>
+            <div class="badge">
+                <figure>
+                    <img src="./images/trusted-badge.png" alt="">
+                </figure>
+            </div>
+        </section>
     </main>
     <footer>
 
