Colorful Branch Done

--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
                 </figure>
             </div>
         </section>
+        <!-- Colorful Branch -->
+        <section class="colorful-branch ">
+            <div class="branch-info">
+                <h1>Join the colorful Branch</h1>
+                <div id="input-parents">
+                    <input type="email" placeholder="Write Email" name="email" id="">
+                    <button class="common-btn">Subscribes</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
