--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Navbar -->
         <nav>
             <figure>
-                <img src="./images/logo .png" alt="">
+                <img src="./images/logo.png" alt="">
             </figure>
             <div class="nav-items">
                 <ul>
@@ -153,8 +153,40 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="footer-div-1">
+            <img src="./images/logo.png" alt="">
+            <p>
+                Indulge your senses with the beauty and fragrance of our fresh flower shop.
+            </p>
+        </div>
+        <div class="footer-div-2">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Contact Us</a></li>
 
+            </ul>
+        </div>
+        <div class="footer-div-3">
+            <ul>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Help Center</a></li>
+            </ul>
+        </div>
+        <div class="footer-div-4">
+            <figure>
+                <img src="./images/icon-linkedin.png" alt="">
+                <img src="./images/icon-twitter.png" alt="">
+                <img src="./images/icon-facebook.png" alt="">
+                <img src="./images/icon-youtube.png" alt="">
+            </figure>
+        </div>
     </footer>
 </body>
 
