--- a/index.html
+++ b/index.html
@@ -142,6 +142,43 @@
                 </figure>
             </div>
         </section>
+        <!-- Deals Sections   -->
+        <section class="deals-section container">
+            <div class="deals-info">
+                <h2><span>Latest</span> Deals</h2>
+                <p>
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                    exotic
+                    blooms, we offer a wide variety of fresh.
+                </p>
+            </div>
+
+            <div class="deals-img-container">
+
+                <div class="left-imgs">
+                    <div class="left-img-1">
+                        <div class="img-text">
+                            <h3>60% Off | Bloom Plant</h3>
+                            <a href="#">Shop Now</a>
+                        </div>
+                    </div>
+                    <div class="left-img-2 ">
+                        <div class="img-text">
+                            <h3>30% Off | Ana Plant</h3>
+                            <a href="#">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-img">
+                    <div class="right-img-text">
+                        <h2>25% Off | Zabo Plant</h2>
+                        <a href="#">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Colorful Branch -->
         <section class="colorful-branch ">
             <div class="branch-info">
