Deals sec responsive & Badge spin done

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <!-- Deals Sections   -->
         <section class="deals-section container">
             <div class="deals-info">
-                <h2><span>Latest</span> Deals</h2>
+                <h2><span class="common-color">Latest</span> Deals</h2>
                 <p>
                     Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
                     exotic
